# ml-project-template

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.claude/: session_notes.md
argo/: README.md  iris-classifier-pipeline.yaml  iris-gb-classifier-pipeline.yaml  iris-mlp-classifier-pipeline.yaml  train-pipeline.yaml
configs/: iris_gb_classifier.json  iris_mlp.json  iris_mlp_classifier.json  iris_mlp_classifier_local.json
configs/local/: iris_gb_classifier.json  iris_mlp_classifier.json
configs/remote/: iris_gb_classifier.json  iris_mlp_classifier.json
docker/preprocess-iris-dataset/: Dockerfile
docker/serve-iris-classifier/: Dockerfile
docker/train-iris-classifier/: Dockerfile
k8s/: README.md  data-loader.yaml  preprocess-iris-dataset.yaml  pvcs.yaml  train-iris-gb-classifier.yaml  train-iris-mlp-classifier.yaml  training-job.yaml
notebooks/: 0.train_iris_classifier.ipynb  1.iris_classifier.ipynb  1.train_sst2_classifier.ipynb
scripts/: onboard.py  onboard_iris_dataset.py  onboard_sst2_dataset.py  preprocess.py  preprocess_iris_dataset.py  serve.py  serve_iris_classifier.py  train.py  train_iris_classifier.py
src/ml_project_template/: training.py
src/ml_project_template/data/: __init__.py  sequence.py  tabular.py
src/ml_project_template/models/: base.py  cnn_sequence_classifier.py  gb_classifier.py  mlp_classifier.py  pytorch_base.py  registry.py
src/ml_project_template/modules/: __init__.py  sequence_cnn.py
tests/: conftest.py  test_dataset.py  test_models.py  test_registry.py  test_seed.py  test_serve.py
(+4 files in other folders)
