[project]
name = "ml-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib",
    "lightning>=2.6.1",
    "mlflow>=3.9.0",
    "numpy<2",
    "pandas",
    "scikit-learn",
    "torch>=2.0,<2.3",
]

[project.scripts]
ml-project-template = "ml_project_template:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
